# meatballs

./: ambientweather.html  api.py  api.sh  db.sql  dev.conf  haus.conf  main.py  package-lock.json  package.json  pyproject.toml  run-dev.sh  serve.py  tailwind.config.js  weather.py
html/: index.html  index.js  lib.js
sql/: two_days.sql
www/: index.css
www/html/: index.css  index.html  index.js  lib.js
