[tool.poetry]
name = "meatballs"
version = "0.1.0"
description = ""
authors = ["wolffiex <adam@sparko.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
