[tool.poetry]
name = "meatballs"
version = "0.1.0"
description = ""
authors = ["wolffiex <adam@sparko.local>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pytz = "^2023.3.post1"
psycopg2 = "^2.9.9"
ipython = "^8.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
